Cross platform ANT